--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -105,7 +105,7 @@
 									</div>
 									<div class="form-group">
 									    <label>รายละเอียดการแจ้งเตือน</label>
-										<textarea class="form-control" rows="5"></textarea>
+										<textarea class="form-control" rows="5" style="resize: vertical;"></textarea>
 									</div>
 									<button type="submit" class="btn btn-primary pull-right">บันทึก</button>
 								</form>
