--- a/backend/src/main/webapp/app/styles/common.css
+++ b/backend/src/main/webapp/app/styles/common.css
@@ -208,3 +208,8 @@ tr.comm-row-strikeout td:before {
     opacity: 0;
   }
 }
+
+.dn-timepicker-popup {
+	max-height: 300px;
+    overflow-y: scroll;
+}
