--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -59,7 +59,7 @@
 										<span class="list-group-item" ng-repeat="data in notificationList track by $index" ng-style="data.isTakeAction ? {color: '#b7b3ae'} : {'font-weight': 700}" style="padding-left: 0; padding-top: 10px; padding-bottom: 3px;">
 											<span style="display: inline-block; width: 40px; text-align: right;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}.</span>&nbsp;&nbsp;&nbsp;	
 											<span class="checkbox_animate">
-												<label>
+												<label style="cursor: pointer;">
 									            	<input type="checkbox" value="" ng-model="data.isTakeAction" ng-change="">
 									            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
 									            	{{ data.name }}
@@ -89,7 +89,6 @@
 				</div>
 				<!-- /.col-lg-4 -->
 				
-				
 				<div class="col-xs-4">
 						<div class="panel panel-primary">
 							<div class="panel-heading">
@@ -98,16 +97,26 @@
 							<!-- /.panel-heading -->
 							<div class="panel-body">
 								
-								<form>
-									<div class="form-group">
-									    <label>หัวข้อการแจ้งเตือน</label>
-									    <input type="text" class="form-control">
+								<form name="bookingForm" novalidate>
+									<div class="form-group" ng-class="{'has-error':bookingForm.subject.$invalid}">
+									    <label class="control-label">หัวข้อการแจ้งเตือน *</label>
+									    <input type="text" name="subject" class="form-control" required="required" ng-model="formData.subject">
 									</div>
-									<div class="form-group">
-									    <label>รายละเอียดการแจ้งเตือน</label>
-										<textarea class="form-control" rows="5" style="resize: vertical;"></textarea>
+									<div class="form-group" ng-class="{'has-error':bookingForm.detail.$invalid}">
+									    <label class="control-label">รายละเอียดการแจ้งเตือน *</label>
+										<textarea class="form-control" name="detail" rows="5" style="resize: vertical;" required="required" ng-model="formData.detail"></textarea>
 									</div>
-									<button type="submit" class="btn btn-primary pull-right">บันทึก</button>
+									<div class="form-group" ng-class="{'has-error':bookingForm.date.$invalid || bookingForm.time.$invalid}">
+										<div class="input-group">
+										  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+										    <input type="text" name="date" class="form-control input-sm" readonly="readonly" required="required" date-parser="dd/MM/yyyy" 
+								    	   	   ng-model="formData.dateFrom" placeholder="วันที่ *" my-datepicker="dateConf">
+											<span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+											<input type="text" name="time" class="form-control input-sm" required="required" dn-timepicker="{{ timesCfg.format }}" ng-model="normalStartTime" placeholder="เวลา *" 
+													min-time="{{ startTimesCfg.minTime }}" max-time="{{ startTimesCfg.maxTime }}" step="{{ timesCfg.step }}" />
+										</div>
+									</div>
+									<button type="submit" class="btn btn-primary pull-right" ng-disabled="bookingForm.$invalid" title="{{ bookingForm.$invalid ? 'กรุณากรอกข้อมูลให้ครบถ้วน' : ''}}">บันทึก</button>
 								</form>
 								
 							</div>
@@ -115,8 +124,6 @@
 							<div class="panel-footer" style="padding-top: 5px; padding-bottom: 5px;"></div>
 						</div>
 					</div>
-				
-				
 			</div>            
         </div>
     </div>
