--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-xs-12">
-			<h1 class="page-header">Notification</h1>
+			<h1 class="page-header">แจ้งเตือน</h1>
 		</div>
 	</div>
 	
@@ -11,12 +11,12 @@
 				<div class="col-xs-8">
 					<div class="panel panel-primary">
 						<div class="panel-heading">
-							<i class="fa fa-bell fa-fw"></i> Notifications Panel
+							<i class="fa fa-bell fa-fw"></i> รายการแจ้งเตือน
 							<div class="pull-right" style="position: relative; bottom: 5px; right: -10px;">
 								<div class="btn-group">
-									<button type="button" class="btn btn-default btn-sm btn-outline active">นัดชำระ<span class="badge pull-right" style="background-color: #a03b42; color: white;">1</span></button>
-									<button type="button" class="btn btn-default btn-sm btn-outline">นัด Call<span class="badge pull-right" style="background-color: #a03b42; color: white;">1</span></button>
-									<button type="button" class="btn btn-default btn-sm btn-outline">ทั่วไป<span class="badge pull-right" style="background-color: #a03b42; color: white;">1</span></button>
+									<button type="button" class="btn btn-default btn-sm btn-outline" ng-class="{'active': group.isActive}" ng-repeat="group in notificationGroups">
+										{{ group.name }}<span class="badge pull-right" style="background-color: #a03b42; color: white;" ng-show="group.alertNum">{{ group.alertNum }}</span>
+									</button>
 								</div>
 								&nbsp;
 								<div class="btn-group pull-right">
@@ -56,22 +56,32 @@
 												</div>
 											</div>
 										</div>
-										<span class="list-group-item" ng-repeat="data in notificationList track by $index" ng-style="data.isTakeAction ? {color: '#b7b3ae'} : {'font-weight': 700}" style="padding-left: 0; padding-top: 10px; padding-bottom: 3px;">
-											<span style="display: inline-block; width: 40px; text-align: right;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}.</span>&nbsp;&nbsp;&nbsp;	
-											<span class="checkbox_animate">
-												<label style="cursor: pointer;">
-									            	<input type="checkbox" value="" ng-model="data.isTakeAction" ng-change="">
-									            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
-									            	{{ data.name }}
-									          	</label>
-									        </span>
-									        <span class="pull-right">
-												<i class="fa fa-eye fa-lg" style="cursor: pointer;"></i> 
-									        </span>
-											<span class="pull-right text-muted small">
-												<em>{{ data.dateTimeDesc }}</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-											</span>
-										</span>
+										<div class="list-group-item col-xs-12" ng-repeat="data in notificationList track by $index" ng-style="data.isTakeAction ? {color: '#b7b3ae'} : {}" 
+											 style="padding-left: 0; padding-top: 15px; padding-bottom: 5px;">
+											 
+											 <div class="col-xs-9" style="padding: 0;">
+												<span style="display: -webkit-box;-webkit-line-clamp: 1;-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis; text-align: left;">
+													<span style="display: inline-block; width: 40px; text-align: right;">{{ $index + 1 + ((formData.currentPage - 1) * formData.itemsPerPage) }}.</span>&nbsp;&nbsp;&nbsp;	
+													<span class="checkbox_animate">
+														<label style="cursor: pointer; margin: 0;">
+											            	<input type="checkbox" value="" ng-model="data.isTakeAction" ng-change="">
+											            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+											            	{{ data.subject }} / 
+											          	</label>
+										            	<small>{{ data.detail }}</small>
+											        </span>
+												</span>
+											</div>
+									 		
+											<div class="col-xs-3">
+										        <span class="pull-right">
+													<i class="fa fa-eye fa-lg" style="cursor: pointer;" title="ดูรายละเอียด"></i> 
+										        </span>
+												<span class="pull-right text-muted small">
+													<em>{{ data.dateTimeDesc }}</em>&nbsp;&nbsp;&nbsp;
+												</span>
+											</div>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -92,7 +102,7 @@
 				<div class="col-xs-4">
 						<div class="panel panel-primary">
 							<div class="panel-heading">
-								<i class="fa fa-bell fa-fw"></i> Create Notifications Panel
+								<i class="fa fa-clock-o fa-fw"></i> สร้างรายการแจ้งเตือน
 							</div>
 							<!-- /.panel-heading -->
 							<div class="panel-body">
