--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -102,7 +102,7 @@
 				<div class="col-xs-4">
 						<div class="panel panel-primary">
 							<div class="panel-heading">
-								<i class="fa fa-clock-o fa-fw"></i> สร้างรายการแจ้งเตือน
+								<i class="fa fa-clock-o fa-fw"></i> สร้างรายการแจ้งเตือนทั่วไป
 							</div>
 							<!-- /.panel-heading -->
 							<div class="panel-body">
