--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -68,17 +68,14 @@
 											            	<span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
 											            	{{ data.subject }} / 
 											          	</label>
-										            	<small>{{ data.detail }}</small>
+										            	<span class="small">{{ data.detail }}</span>
 											        </span>
 												</span>
 											</div>
-									 		
 											<div class="col-xs-3">
-										        <span class="pull-right">
+												<span class="pull-right">
+													<em class="text-muted small">{{ data.bookingDateTime }}</em>&nbsp;&nbsp;&nbsp;
 													<i class="fa fa-eye fa-lg" style="cursor: pointer;" title="ดูรายละเอียด"></i> 
-										        </span>
-												<span class="pull-right text-muted small">
-													<em>{{ data.dateTimeDesc }}</em>&nbsp;&nbsp;&nbsp;
 												</span>
 											</div>
 										</div>
