--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -14,7 +14,7 @@
 							<i class="fa fa-bell fa-fw"></i> รายการแจ้งเตือน
 							<div class="pull-right" style="position: relative; bottom: 5px; right: -10px;">
 								<div class="btn-group">
-									<button type="button" class="btn btn-default btn-sm btn-outline" ng-class="{'active': group.isActive}" ng-repeat="group in notificationGroups" ng-click="changeGroup(group)">
+									<button id="group_menu_{{ group.id }}" type="button" class="btn btn-default btn-sm btn-outline" ng-class="{'active': group.isActive}" ng-repeat="group in notificationGroups" ng-click="changeGroup(group)">
 										{{ group.name }}<span class="badge pull-right" style="background-color: #a03b42; color: white;" ng-show="group.alertNum">{{ group.alertNum }}</span>
 									</button>
 								</div>
@@ -24,8 +24,11 @@
 								      	{{ lastTakeActionMenuActive.name }}&nbsp;<span class="caret"></span>
 								    </button>
 								    <ul class="dropdown-menu">
-								      	<li ng-repeat="menu in isTakeActionMenus" ng-click="isTakeActionGet(menu)">
-								      		<a href=""><i class="fa" ng-class="{'fa-circle-o': menu.id == 1, 'fa-check-circle-o': menu.id == 2, 'fa-adjust': menu.id == 3}"></i> {{ menu.name }}</a>
+								      	<li id="action_menu_{{ menu.id }}" ng-repeat="menu in isTakeActionMenus" ng-click="isTakeActionGet(menu)">
+								      		<a href="">
+								      		<i class="fa" ng-class="{'fa-circle-o': menu.id == 1, 'fa-check-circle-o': menu.id == 2, 'fa-adjust': menu.id == 3, 'fa-asterisk': menu.id == 4}" ng-style="menu.id == 4 ? {'color': '#d6990c'} : {}"></i> 
+								      		{{ menu.name }}
+								      		</a>
 								      	</li>
 								    </ul>
 							  	</div>
