--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -78,7 +78,8 @@
 											<div class="col-xs-3">
 												<span class="pull-right">
 													<em class="text-muted small">{{ data.bookingDateTimeStr }}</em>&nbsp;&nbsp;&nbsp;
-													<i class="fa fa-eye fa-lg" style="cursor: pointer;" title="ดูรายละเอียด" ng-click="view(data)"></i> 
+													<i class="fa fa-eye fa-lg" style="cursor: pointer;" title="ดูรายละเอียด" ng-click="view(data)"></i>
+													<i class="fa fa-times fa-lg user-action-icon-danger" style="margin-left: 3px;" ng-show="lastTakeActionMenuActive.id == 4 && lastGroupActive.id == 3" ng-click="remove(data._id)"></i>
 												</span>
 											</div>
 										</div>
