--- a/backend/src/main/webapp/app/views/home/main.html
+++ b/backend/src/main/webapp/app/views/home/main.html
@@ -36,6 +36,11 @@
 								</div>
 	                        </div>
 	                    </div>
+	                    
+	                    <div>
+	                    	<button ng-click="broardCast()">Send Message</button>
+	                    </div>
+	                    
                     </div>
                 </div>
 			</div>
