--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -119,7 +119,7 @@
 				</div>
 				<!-- /.col-lg-4 -->
 				
-				<div class="col-xs-4">
+				<div class="col-xs-4" ng-hide="group0">
 						<div class="panel panel-primary">
 							<div class="panel-heading">
 								<i class="fa fa-clock-o fa-fw"></i> {{ mode == 1 ? 'สร้าง' : mode == 2 ? 'แก้ใข' : 'แสดง'}}รายการแจ้งเตือนทั่วไป
