--- a/backend/src/main/webapp/app/views/db_backup_show/main.html
+++ b/backend/src/main/webapp/app/views/db_backup_show/main.html
@@ -61,7 +61,7 @@
 									<td style="vertical-align: middle; text-align: center;">{{ data.createdDateTime | date:gb_dateTimeFormat }}</td>
 									<td style="vertical-align: middle; text-align: right;">{{ data.fileSize | number:2 }}</td>
 									<td style="vertical-align: middle; text-indent: 25px;">
-										<a href="" title="Download" ng-click="download(data.fileName)">{{ data.fileName }}</a>
+										<a href="" title="Download" ng-click="download(data)">{{ data.fileName }}</a>
 									</td>
 									<td style="vertical-align: middle; text-align: center;">
 										<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="deleteDb(data.fileName)" title="ลบ" ng-hide="isLogFile"></i>
