--- a/backend/src/main/webapp/app/styles/chatting.css
+++ b/backend/src/main/webapp/app/styles/chatting.css
@@ -1,7 +1,7 @@
 #chatbox {
 	width: 290px;
 	background: #fff;
-	border-radius: 10px 10px 0 0;
+	border-radius: 10px 0 0 0;
 	box-shadow: -2px -1px 5px 0px #7fa5c5;
 	overflow: hidden;
 	height: 500px;
