--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -56,7 +56,7 @@
 						<!-- /.panel-heading -->
 						<div class="panel-body" style="padding: 3px;">
 							<div class="row">
-								<div class="col-xs-12">
+								<div class="col-xs-12" style="margin-top: -10px;">
 									<div class="list-group" style="margin-bottom: 0;">
 										<div class="list-group-item" style="padding-top: 0; padding-bottom: 0;">
 											<div class="row">
@@ -79,7 +79,7 @@
 											</div>
 										</div>
 										<div class="list-group-item col-xs-12" ng-repeat="data in notificationList track by $index" ng-style="data.isTakeAction ? {color: '#b7b3ae'} : lastTakeActionMenuActive.id == 4 ? {color: '#d6990c'} : {}" 
-											 style="padding-left: 0;">
+											 style="padding-left: 0; border: .5px solid #ddd;">
 											 
 											 <div class="col-xs-9" style="padding: 0;">
 												<span style="display: -webkit-box;-webkit-line-clamp: 1;-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis; text-align: left;">
