--- a/backend/src/main/webapp/app/styles/chatting.css
+++ b/backend/src/main/webapp/app/styles/chatting.css
@@ -41,6 +41,7 @@
 	margin-left: 35%;
 	color: #d3e0ea;
 	cursor: pointer;
+	transition: .5s ease-in-out;
 }
 
 #chatbox #topmenu hr {
@@ -50,7 +51,7 @@
     background: #62819c;
     border: none;
     position: relative;
-    bottom: 5px;
+    bottom: 4px;
     transition: .5s ease-in-out;
     left: 0;
 }
